# jni-ndk

./: CMake语法.md  README.md  adb command.md  字符串处理.md  访问java实例变量和静态变量.md  访问java实例方法和静态方法.md  访问数组.md  调用构造方法和父类实例方法.md
CameraToYUV/app/: build.gradle
CameraToYUV/app/src/main/: AndroidManifest.xml
CameraToYUV/app/src/main/java/com/zdd/cameratoyuv/: MainActivity.java
CameraToYUV/app/src/main/java/com/zdd/cameratoyuv/util/: CameraUtil.java  LogUtils.java
CameraToYUV/app/src/main/java/com/zdd/cameratoyuv/widget/: CameraSurfaceView.java
CameraToYUV/app/src/main/res/layout/: activity_main.xml
CameraToYUV/app/src/main/res/values/: strings.xml
CameraToYUV/gradle/wrapper/: gradle-wrapper.properties
FFmpegDecoderToYUV/app/: CMakeLists.txt  build.gradle
FFmpegDecoderToYUV/app/src/main/: AndroidManifest.xml
FFmpegDecoderToYUV/app/src/main/cpp/: native-lib.cpp
FFmpegDecoderToYUV/app/src/main/java/com/zdd/ffmpegdecodertoyuv/: MainActivity.java
FFmpegDecoderToYUV/app/src/main/res/layout/: activity_main.xml
FFmpegDecoderToYUV/app/src/main/res/values/: strings.xml
FFmpegDecoderToYUV/gradle/wrapper/: gradle-wrapper.properties
FFmpegLib/app/: CMakeLists.txt  build.gradle
FFmpegLib/app/src/main/: AndroidManifest.xml
FFmpegLib/app/src/main/cpp/: native-lib.cpp
FFmpegLib/app/src/main/java/com/zdd/ffmpeglib/: MainActivity.java
FFmpegLib/app/src/main/res/layout/: activity_main.xml
FFmpegLib/app/src/main/res/values/: strings.xml
FFmpegLib/gradle/wrapper/: gradle-wrapper.properties
FFmpegPushStream/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
FFmpegPushStream/app/src/main/: AndroidManifest.xml
FFmpegPushStream/app/src/main/cpp/: native-lib.cpp
FFmpegPushStream/app/src/main/java/com/zdd/ffmpegpushstream/: MainActivity.java
FFmpegPushStream/app/src/main/jniLibs/include/libavutil/: ffversion.h
FFmpegPushStream/app/src/main/res/layout/: activity_main.xml
FFmpegPushStream/app/src/main/res/values/: strings.xml
FFmpegPushStream/gradle/wrapper/: gradle-wrapper.properties
FFmpegTranscoder/app/: CMakeLists.txt  build.gradle
FFmpegTranscoder/app/src/main/: AndroidManifest.xml
FFmpegTranscoder/app/src/main/cpp/: cmdutils.h  cmdutils_common_opts.h  ffmpeg_jni.c  native-lib.cpp
FFmpegTranscoder/app/src/main/java/com/zdd/ffmpegtranscoder/: MainActivity.java
FFmpegTranscoder/app/src/main/res/layout/: activity_main.xml
FFmpegTranscoder/app/src/main/res/values/: strings.xml
FFmpegTranscoder/gradle/wrapper/: gradle-wrapper.properties
FFmpgeLive/: README.md
FFmpgeLive/app/: CMakeLists.txt  build.gradle
FFmpgeLive/app/src/main/: AndroidManifest.xml
FFmpgeLive/app/src/main/cpp/: native-lib.cpp
FFmpgeLive/app/src/main/java/com/zdd/ffmpgelive/: LiveActivity.java  MainActivity.java
FFmpgeLive/app/src/main/jniLibs/armeabi/: libx264.so.148
FFmpgeLive/app/src/main/res/layout/: activity_live.xml  activity_main.xml
FFmpgeLive/app/src/main/res/menu/: menu_live.xml
FFmpgeLive/app/src/main/res/values/: strings.xml
FFmpgeLive/gradle/wrapper/: gradle-wrapper.properties
JniCallback/: README.md
JniCallback/app/: build.gradle  proguard-rules.pro
JniCallback/app/src/main/: AndroidManifest.xml
JniCallback/app/src/main/cpp/: MyLog.h  native-lib.cpp
JniCallback/app/src/main/java/com/zdd/jnicallback/: MainActivity.java
JniCallback/app/src/main/res/layout/: activity_main.xml
JniCallback/app/src/main/res/values/: strings.xml
JniCallback/gradle/wrapper/: gradle-wrapper.properties
Neon/app/: CMakeLists.txt  build.gradle
Neon/app/src/main/: AndroidManifest.xml
Neon/app/src/main/cpp/: native-lib.cpp
Neon/app/src/main/java/com/zdd/neon/: MainActivity.java
Neon/app/src/main/res/layout/: activity_main.xml
Neon/gradle/wrapper/: gradle-wrapper.properties
